--- a/design/Palette_demo/home.html
+++ b/design/Palette_demo/home.html
@@ -26,7 +26,7 @@
 
       <!-- button 2 (Rectangle) -->
       <div id="u0" class="ax_default box_1" data-label="button 2">
-        <img id="u0_img" class="img " src="images/home/button_2_u0.png"/>
+        <div id="u0_div" class=""></div>
         <div id="u0_text" class="text ">
           <p><span></span></p>
         </div>
@@ -34,7 +34,7 @@
 
       <!-- toolbar button 3 (Rectangle) -->
       <div id="u1" class="ax_default box_1" data-label="toolbar button 3">
-        <img id="u1_img" class="img " src="images/home/button_2_u0.png"/>
+        <div id="u1_div" class=""></div>
         <div id="u1_text" class="text ">
           <p><span></span></p>
         </div>
@@ -42,7 +42,7 @@
 
       <!-- toolbar button 4 (Rectangle) -->
       <div id="u2" class="ax_default box_1" data-label="toolbar button 4">
-        <img id="u2_img" class="img " src="images/home/button_2_u0.png"/>
+        <div id="u2_div" class=""></div>
         <div id="u2_text" class="text ">
           <p><span></span></p>
         </div>
@@ -50,7 +50,7 @@
 
       <!-- toolbar button 5 (Rectangle) -->
       <div id="u3" class="ax_default box_1" data-label="toolbar button 5">
-        <img id="u3_img" class="img " src="images/home/button_2_u0.png"/>
+        <div id="u3_div" class=""></div>
         <div id="u3_text" class="text ">
           <p><span></span></p>
         </div>
@@ -58,126 +58,65 @@
 
       <!-- toolbar button 6 (Rectangle) -->
       <div id="u4" class="ax_default box_1" data-label="toolbar button 6">
-        <img id="u4_img" class="img " src="images/home/button_2_u0.png"/>
+        <div id="u4_div" class=""></div>
         <div id="u4_text" class="text ">
           <p><span></span></p>
         </div>
       </div>
 
-      <!-- menu (Dynamic Panel) -->
-      <div id="u5" class="ax_default ax_default_hidden" data-label="menu" style="display:none; visibility: hidden">
-        <div id="u5_state0" class="panel_state" data-label="State1" style="">
-          <div id="u5_state0_content" class="panel_state_content">
+      <!-- menu (Group) -->
+      <div id="u5" class="ax_default ax_default_hidden" data-label="menu" style="display:none; visibility: hidden" data-left="0" data-top="0" data-width="0" data-height="0">
 
-            <!-- Unnamed (Rectangle) -->
-            <div id="u6" class="ax_default box_1">
-              <div id="u6_div" class=""></div>
-            </div>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u6" class="ax_default box_1">
+          <div id="u6_div" class=""></div>
+        </div>
 
-            <!-- Unnamed (Rectangle) -->
-            <div id="u7" class="ax_default label">
-              <div id="u7_div" class=""></div>
-              <div id="u7_text" class="text ">
-                <p><span>Category Title</span></p>
-              </div>
-            </div>
-
-            <!-- List items (Group) -->
-            <div id="u8" class="ax_default" data-label="List items" data-left="10" data-top="45" data-width="182" data-height="94">
-
-              <!-- Unnamed (Rectangle) -->
-              <div id="u9" class="ax_default label">
-                <div id="u9_div" class=""></div>
-                <div id="u9_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item One</span></p>
-                </div>
-              </div>
-
-              <!-- Unnamed (Rectangle) -->
-              <div id="u10" class="ax_default label">
-                <div id="u10_div" class=""></div>
-                <div id="u10_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item Two with a really </span><span style="font-family:'ArialMT', 'Arial';color:#FFFFFF;">lon.</span><span style="font-family:'ArialMT', 'Arial';color:#363636;">long name </span><span style="font-family:'sans-serif';color:#363636;"> </span></p>
-                </div>
-              </div>
-
-              <!-- Unnamed (Rectangle) -->
-              <div id="u11" class="ax_default label">
-                <div id="u11_div" class=""></div>
-                <div id="u11_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item Three</span></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- close (Rectangle) -->
-            <div id="u12" class="ax_default label" data-label="close">
-              <div id="u12_div" class=""></div>
-              <div id="u12_text" class="text ">
-                <p><span>&nbsp;&nbsp; </span></p>
-              </div>
-            </div>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u7" class="ax_default label">
+          <div id="u7_div" class=""></div>
+          <div id="u7_text" class="text ">
+            <p style="font-size:16px;"><span style="font-family:'FontAwesome';color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';font-size:11px;color:#363636;">Item Two with a really </span><span style="font-family:'ArialMT', 'Arial';font-size:11px;color:#FFFFFF;">lon.</span><span style="font-family:'ArialMT', 'Arial';font-size:11px;color:#363636;">long name </span><span style="font-family:'sans-serif';font-size:11px;color:#363636;"> </span></p>
           </div>
         </div>
-        <div id="u5_state1" class="panel_state" data-label="State2" style="visibility: hidden;">
-          <div id="u5_state1_content" class="panel_state_content">
 
-            <!-- Unnamed (Rectangle) -->
-            <div id="u13" class="ax_default box_1">
-              <div id="u13_div" class=""></div>
-            </div>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u8" class="ax_default label">
+          <div id="u8_div" class=""></div>
+          <div id="u8_text" class="text ">
+            <p><span>Category Title</span></p>
+          </div>
+        </div>
 
-            <!-- Unnamed (Rectangle) -->
-            <div id="u14" class="ax_default label">
-              <div id="u14_div" class=""></div>
-              <div id="u14_text" class="text ">
-                <p><span>Category Title</span></p>
-              </div>
-            </div>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u9" class="ax_default label">
+          <div id="u9_div" class=""></div>
+          <div id="u9_text" class="text ">
+            <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item One</span></p>
+          </div>
+        </div>
 
-            <!-- List items (Group) -->
-            <div id="u15" class="ax_default" data-label="List items" data-left="10" data-top="45" data-width="182" data-height="95">
+        <!-- Unnamed (Rectangle) -->
+        <div id="u10" class="ax_default label">
+          <div id="u10_div" class=""></div>
+          <div id="u10_text" class="text ">
+            <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item Three</span></p>
+          </div>
+        </div>
 
-              <!-- Unnamed (Rectangle) -->
-              <div id="u16" class="ax_default label">
-                <div id="u16_div" class=""></div>
-                <div id="u16_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item One</span></p>
-                </div>
-              </div>
-
-              <!-- Unnamed (Rectangle) -->
-              <div id="u17" class="ax_default label">
-                <div id="u17_div" class=""></div>
-                <div id="u17_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'sans-serif';color:#363636;">long name&nbsp; </span></p>
-                </div>
-              </div>
-
-              <!-- Unnamed (Rectangle) -->
-              <div id="u18" class="ax_default label">
-                <div id="u18_div" class=""></div>
-                <div id="u18_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Three</span></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- close (Rectangle) -->
-            <div id="u19" class="ax_default label" data-label="close">
-              <div id="u19_div" class=""></div>
-              <div id="u19_text" class="text ">
-                <p><span>&nbsp;&nbsp; </span></p>
-              </div>
-            </div>
+        <!-- close (Rectangle) -->
+        <div id="u11" class="ax_default label" data-label="close">
+          <div id="u11_div" class=""></div>
+          <div id="u11_text" class="text ">
+            <p><span></span></p>
           </div>
         </div>
       </div>
 
       <!-- toolbar button 1 (Rectangle) -->
-      <div id="u20" class="ax_default box_1" data-label="toolbar button 1">
-        <img id="u20_img" class="img " src="images/home/button_2_u0.png"/>
-        <div id="u20_text" class="text ">
+      <div id="u12" class="ax_default box_1" data-label="toolbar button 1">
+        <div id="u12_div" class=""></div>
+        <div id="u12_text" class="text ">
           <p><span></span></p>
         </div>
       </div>
